<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <TextView
            android:id="@+id/title"
            android:layout_marginTop="12dp"
            android:layout_alignParentTop="true"
            android:textSize="24sp"
            android:textColor="@color/main_color"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/gesture_sensor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    <ImageView
            android:id="@+id/iv_home"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/bt_home"
            android:layout_alignParentRight="true"
            android:layout_width="48dp"
            android:layout_height="48dp" />
    <ImageView
        android:layout_below="@id/iv_home"
        android:id="@+id/iv_reset"
        android:layout_marginRight="16dp"
        android:background="@drawable/bt_reset"
        android:layout_alignParentRight="true"
        android:layout_width="48dp"
        android:layout_height="48dp" />
    <TextView
        android:id="@+id/introduce"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:layout_alignParentBottom="true"
        android:textSize="20sp"
        android:textColor="@color/adjust_text_color"
        android:text="@string/gesture_sensor_introduce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_above="@id/introduce"
        android:layout_below="@id/title"
        android:layout_weight="4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/center"
            android:layout_centerInParent="true"
            android:layout_width="36dp"
            android:layout_height="36dp"/>
        <LinearLayout
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/center"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_gravity="center_vertical"
                android:text="@string/left"
                android:textColor="@color/main_color"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
             <CheckBox
                 android:id="@+id/gesture_left_1"
                 android:button="@null"
                 android:background="@drawable/ic_gesture_left_off"
                 android:layout_width="36dp"
                 android:layout_height="36dp" />
            <CheckBox
                android:id="@+id/gesture_left_2"
                android:button="@null"
                android:background="@drawable/ic_gesture_left_off"
                android:layout_width="36dp"
                android:layout_height="36dp" />
            <CheckBox
                android:id="@+id/gesture_left_3"
                android:button="@null"
                android:background="@drawable/ic_gesture_left_off"
                android:layout_width="36dp"
                android:layout_height="36dp" />
        </LinearLayout>
        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_centerHorizontal="true"
            android:layout_above="@id/center"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_gravity="center_horizontal"
                android:text="@string/up"
                android:textColor="@color/main_color"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <CheckBox
                android:id="@+id/gesture_up_1"
                android:button="@null"
                android:background="@drawable/ic_gesture_up_off"
                android:layout_width="36dp"
                android:layout_height="36dp" />
            <CheckBox
                android:id="@+id/gesture_up_2"
                android:button="@null"
                android:background="@drawable/ic_gesture_up_off"
                android:layout_width="36dp"
                android:layout_height="36dp" />
        </LinearLayout>

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/center"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/gesture_down_2"
                android:button="@null"
                android:background="@drawable/ic_gesture_down_off"
                android:layout_width="36dp"
                android:layout_height="36dp" />
            <CheckBox
                android:id="@+id/gesture_down_1"
                android:button="@null"
                android:background="@drawable/ic_gesture_down_off"
                android:layout_width="36dp"
                android:layout_height="36dp" />
            <TextView
                android:layout_gravity="center_horizontal"
                android:text="@string/down"
                android:textColor="@color/main_color"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/center"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/gesture_right_3"
                android:button="@null"
                android:background="@drawable/ic_gesture_right_off"
                android:layout_width="36dp"
                android:layout_height="36dp" />
            <CheckBox
                android:id="@+id/gesture_right_2"
                android:button="@null"
                android:background="@drawable/ic_gesture_right_off"
                android:layout_width="36dp"
                android:layout_height="36dp" />
            <CheckBox
                android:id="@+id/gesture_right_1"
                android:button="@null"
                android:background="@drawable/ic_gesture_right_off"
                android:layout_width="36dp"
                android:layout_height="36dp" />
            <TextView
                android:layout_gravity="center_vertical"
                android:text="@string/right"
                android:textColor="@color/main_color"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
