<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_home"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/bt_home_emi"
            android:layout_alignParentRight="true"
            android:layout_width="48dp"
            android:layout_height="48dp" />
    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
        android:layout_weight="1.8"
        android:layout_marginLeft="24dp"
        android:layout_below="@id/iv_home"
        android:layout_width="0dp"
        android:layout_height="match_parent">
        <TextView
            android:textColor="@color/main_color"
            android:id="@+id/adjust_title"
            android:layout_marginTop="16dp"
            android:layout_centerHorizontal="true"
            android:textSize="24sp"
            android:text="@string/adjust"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <com.wongs.views.SeekBarView
            android:layout_marginTop="8dp"
            android:layout_below="@id/adjust_title"
            android:paddingLeft="16dp"
            android:id="@+id/sa_1"
            app:touchInside="false"
            app:rotation="180"
            app:startAngle="45"
            app:sweepAngle="270"
            app:arcWidth="8dp"
            android:layout_alignParentRight="true"
            android:layout_width="match_parent"
            android:layout_height="210dp"
         />
       <RelativeLayout
           android:layout_centerHorizontal="true"
            android:layout_alignTop="@id/sa_1"
            android:layout_width="180dp"
            android:layout_height="210dp">
            <TextView
                android:id="@+id/tv_temp_value"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:text="48"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="98sp"/>
           <TextView
               android:layout_marginTop="8dp"
               android:id="@+id/tv_temp_symbol"
               android:layout_marginRight="-12dp"
               android:layout_alignRight="@id/tv_temp_value"
               android:layout_alignTop="@id/tv_temp_value"
               android:text="@string/temp_symbol"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textSize="56sp"/>
           <TextView
               android:layout_marginLeft="32dp"
               android:layout_marginTop="40dp"
               android:id="@+id/tv_indoor"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="indoor"
               android:textSize="16sp"
               android:textColor="@color/main_color"/>
           <TextView
               android:layout_marginRight="32dp"
               android:layout_marginTop="40dp"
               android:layout_alignParentRight="true"
               android:id="@+id/tv_value_humidity"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="40%"
               android:textSize="16sp"
               android:textColor="@color/main_color"/>
           <ImageView
               android:layout_marginTop="42dp"
               android:layout_toLeftOf="@id/tv_value_humidity"
               android:layout_width="16dp"
               android:layout_height="16dp"
               android:background="@drawable/ic_waterdrop_emi"/>

            <LinearLayout
                android:layout_marginTop="-8dp"
                android:layout_below="@id/tv_temp_value"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:background="@drawable/ic_heat_emi"/>
                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:background="@drawable/ic_cool_emi"/>
                <TextView
                    android:textColor="@color/main_color"
                    android:layout_marginLeft="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="heat / cool"/>
            </LinearLayout>
        </RelativeLayout>
        <TextView
            android:textColor="@color/main_color"
            android:id="@+id/tv_heat_to"
            android:layout_marginTop="-40dp"
            android:layout_marginLeft="32dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/sa_1"
            android:text="heat-to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_heat"
            android:textColor="@color/heat_color"
            android:layout_marginTop="-12dp"
            android:gravity="center_horizontal"
            android:textSize="38sp"
            android:layout_alignLeft="@id/tv_heat_to"
            android:layout_alignRight="@id/tv_heat_to"
            android:layout_below="@id/tv_heat_to"
            android:text="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textColor="@color/main_color"
            android:id="@+id/tv_cool_to"
            android:layout_marginTop="-40dp"
            android:layout_marginRight="32dp"
            android:layout_alignParentRight="true"
            android:layout_below="@id/sa_1"
            android:text="cool-to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_cool"
            android:textColor="@color/cool_color"
            android:layout_marginTop="-12dp"
            android:gravity="center_horizontal"
            android:textSize="38sp"
            android:layout_alignLeft="@id/tv_cool_to"
            android:layout_alignRight="@id/tv_cool_to"
            android:layout_below="@id/tv_heat_to"
            android:text="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textColor="@color/adjust_text_color"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:text="@string/adjust_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
       <RelativeLayout
           android:layout_marginRight="48dp"
           android:layout_weight="1.2"
           android:layout_width="0dp"
           android:layout_height="match_parent">
           <TextView
               android:textColor="@color/adjust_text_color"
               android:id="@+id/tv_heat_cool"
               android:layout_marginBottom="16dp"
               android:textSize="16sp"
               android:layout_centerHorizontal="true"
               android:gravity="center"
               android:layout_alignParentBottom="true"
               android:text="@string/heat_cool_text"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content" />

           <RelativeLayout
               android:layout_marginLeft="8dp"
               android:layout_alignParentLeft="true"
               android:layout_above="@id/tv_heat_cool"
               android:layout_width="72dp"
               android:layout_height="match_parent">
               <ImageView
                   android:layout_alignParentBottom="true"
                   android:layout_centerHorizontal="true"
                   android:id="@+id/iv_cool"
                   android:background="@drawable/ic_cooler_disactivated"
                   android:gravity="center_horizontal"
                   android:layout_width="48dp"
                   android:layout_height="42dp" />
               <com.wongs.views.HeatCoolView
                   android:layout_centerHorizontal="true"
                   android:layout_marginBottom="12dp"
                   android:id="@+id/cool_display"
                   android:layout_above="@id/iv_cool"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"/>
           </RelativeLayout>
         <RelativeLayout
             android:layout_marginRight="8dp"
             android:layout_alignParentRight="true"
             android:layout_above="@id/tv_heat_cool"
             android:layout_width="72dp"
             android:layout_height="match_parent">
             <ImageView
                 android:layout_alignParentBottom="true"
                 android:layout_centerHorizontal="true"
                 android:id="@+id/iv_heat"
                 android:background="@drawable/ic_heater_disactivated"
                 android:gravity="center_horizontal"
                 android:layout_width="42dp"
                 android:layout_height="42dp" />
             <com.wongs.views.HeatCoolView
                 android:layout_centerHorizontal="true"
                 android:layout_marginBottom="12dp"
                 android:id="@+id/heat_display"
                 android:layout_above="@id/iv_heat"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
         </RelativeLayout>

       </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
